--- a/css/comments.css
+++ b/css/comments.css
@@ -50,12 +50,14 @@ body {
 	height: 76px;
 	background-color: #1c5bc3;
 	position: relative;
+	z-index: 1;
 }
 
 .logo--header {
 	position: absolute;
 	top: 20px;
 	left: 20px;
+
 }
 
 .contacts {
@@ -261,7 +263,6 @@ body {
 .logo--footer {
 	position: absolute;
 	top: 20px;
-	/*left: 490px;*/
 	margin-left: 50%;
 	left: -60px;
 }
