--- a/css/comments.css
+++ b/css/comments.css
@@ -111,7 +111,6 @@ body {
 }
 
 .menu__item {
-
 	
 }
 
@@ -181,7 +180,8 @@ body {
 }
 
 .main__item {
-
+	border-bottom: 2px solid #f5f5f5;
+	padding-bottom: 50px;
 }
 
 .main__item-img {
