--- a/css/comments.css
+++ b/css/comments.css
@@ -31,14 +31,12 @@
 	clear: both;
 }
 
-html {
+html, body {
 	width: 100%;
 	height: 100%;
-}
-
-body {
-	width: 100%;
-	height: 100%;
+	font-family: Roboto;
+	font-weight: 300;
+    font-style: normal;
 }
 
 .container {
@@ -47,11 +45,8 @@ body {
 	margin: 0 auto;
 }
 
-/*empty block for correct display footer and header*/
-.empty-block {
-	height: 76px;
-}
-			/*HEADER*/
+/*HEADER*/
+
 .header {
 	width: 100%;
 	height: 76px;
@@ -59,6 +54,7 @@ body {
 	position: relative;
 	z-index: 1;
 }
+
 
 .logo--header {
 	position: absolute;
@@ -94,13 +90,13 @@ body {
 	font-weight: 700;
 	text-decoration: underline;
 }
-			/*SECTION*/
+
+/*SECTION*/
 .section {
 	width: 100%;
 	min-height: 100%;
 	position: relative;
 	overflow: hidden;
-	font-size: 0;
 }
 
 .section:after {
@@ -109,7 +105,7 @@ body {
 	height: 76px;
 }
 
-			/*SIDEBAR*/
+/*SIDEBAR*/
 .sidebar {
 	width: 200px;
 	float: left;
@@ -117,8 +113,8 @@ body {
 
 .menu__list {
 	max-width: 180px;
-	margin-top: 50px;
-	margin-left: 20px;
+	margin-top: 47px;
+	margin-left: 27px;
 	list-style-type: none;
 }
 
@@ -126,17 +122,15 @@ body {
 	
 }
 
-.menu__item {
-
-}
 .menu__link {
 	text-decoration: none;
 	display: block;
-	margin-bottom: 40px;
+	margin-bottom: 27px;
+	letter-spacing: 2px;
 }
 
 .menu__img-icon {
-	margin-left: -90px;
+	margin-left: -104px;
 	position: relative;
 	top: 4px;
 }
@@ -158,7 +152,8 @@ body {
 .menu__link-text--active-page {
 	color: #221f1f;
 }
-			/*MAIN*/
+
+/*MAIN*/
 .content {
 	float: left;
 	width: 900px;
@@ -195,6 +190,10 @@ body {
 	border-bottom: 2px solid #f5f5f5;
 	padding-bottom: 50px;
 	margin-bottom: 30px;
+}
+
+.main__item--no-bot-border {
+	border-bottom: 0;
 }
 
 .main__item-img {
@@ -238,8 +237,106 @@ body {
 	line-height: 30px;
 }
 
+/*PAGINATOR*/
+.paginator {
+	margin-left: 220px;
+}
 
-			/*FOOTER*/
+.paginator__page-nomber {
+
+	color: #656464;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 300;
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 20px;
+}
+
+.paginator__less {
+	width: 6px;
+	height: 10px;
+	background-image: url(../img/icons/less-icon.png);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 15px;
+}	
+
+.paginator__list {
+	list-style-type: none;
+	font-size: 0;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.paginator__item {
+	display: inline-block;
+	vertical-align: middle;
+	color: #221f1f;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 25px;
+	text-align: center;
+	width: 25px;
+	height: 25px;
+	border-radius: 3px;
+	background-color: transparent;
+
+	/*forgot wrap in "a" tag*/
+	cursor: pointer;
+}
+
+.paginator__item:hover {
+	width: 25px;
+	height: 25px;
+	color: #ffffff;
+	border-radius: 3px;
+	background-color: #1c5bc3;
+}
+
+.paginator__more {
+	width: 6px;
+	height: 10px;
+	background-image: url(../img/icons/more-icon.png);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 15px;
+}
+
+/*FORM*/
+.form {
+	width: 700px;
+	height: 427px;
+	border-radius: 3px;
+	background-color: #f5f5f5;
+}
+
+.form__header {
+	color: #221f1f;
+	font-family: Roboto;
+	font-size: 49px;
+	font-weight: 700;
+}
+
+.form__label {
+
+}
+
+.form__label-text {
+	color: #221f1f;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 300;
+}
+
+/*FOOTER*/
 .footer {
 	width: 1100px;
 	margin: 0 auto;
