--- a/css/components/comments.css
+++ b/css/components/comments.css
@@ -93,7 +93,7 @@
 .paginator__less {
 	width: 6px;
 	height: 10px;
-	background-image: url(../img/icons/less-icon.png);
+	background-image: url(../../img/icons/less-icon.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -138,7 +138,7 @@
 .paginator__more {
 	width: 6px;
 	height: 10px;
-	background-image: url(../img/icons/more-icon.png);
+	background-image: url(../../img/icons/more-icon.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -147,30 +147,194 @@
 	margin-left: 6px;
 }
 
-/*FORM*/
+/*
+	FORM
+*/
+
 .form {
 	width: 700px;
-	height: 427px;
+	/*height: 427px;*/
 	border-radius: 3px;
 	background-color: #f5f5f5;
+	padding: 50px 70px;
+	margin-bottom: 70px;
 }
 
-.form__header {
+.form__title {
 	color: #221f1f;
 	font-family: Roboto;
 	font-size: 49px;
 	font-weight: 700;
+	margin-bottom: 30px;
 }
 
-.form__label {
-
+.form__cell {
+	width: 270px;
+	float: left;
+	display: block;
 }
 
-.form__label-text {
+.form_row {
+	margin-bottom: 20px;
+}
+.form__cell:first-child {
+	margin-right: 20px;
+}
+
+.form__cell-title {
+	margin-bottom: 7px;	
 	color: #221f1f;
 	font-family: Roboto;
 	font-size: 14px;
 	font-weight: 300;
+	display: block;
+}
+
+.form__input-text {
+	display: block;
+	width: 100%;
+	border: 1px solid transparent;
+	border-radius: 3px;	
+	padding: 17px 9px;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 300;
+	color: #221f1f;
+}
+
+.form__cell-textarea {
+	width: 100%;
+	display: block;
+}
+
+.form__input-textarea {
+	display: block;
+	width: 100%;
+	height: 90px;
+	border: 1px solid transparent;
+	border-radius: 3px;
+	padding: 17px 9px;
+	color: #221f1f;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 300;
+	resize: none;
+}
+
+.form__input-text:focus, .form__input-textarea:focus {
+	border: 1px solid #1c5bc3;
+	outline: none;
+}
+
+.form__row-btns {
+	
+}
+
+.form__controls {
+
+}
+
+.form__controls-title {
+	color: #221f1f;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 300;
+	margin-bottom: 9px;
+}
+
+.form__controls-btns {
+	width: 50%;
+	float: left;
+}
+
+.form__radio {
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.form__radio-elem {
+	display: inline-block;
+	vertical-align: middle;
+	display: none;
 }
 
 
+.form__radio-fake {
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background-image: linear-gradient(to top, #ededed 0%, #ffffff 100%);
+	border: 1px solid #c9c9c9;
+	display: inline-block;
+	vertical-align: middle;
+	position: relative;
+}
+
+
+.form__radio-text {
+	color: #221f1f;
+	font-family: Roboto;
+	font-size: 14px;
+	font-weight: 300;
+	display: inline-block;
+	vertical-align: middle;
+}	
+
+.form__radio-elem:checked + .form__radio-fake {
+	border: 1px solid #1c5bc3;
+}
+.form__radio-elem:checked + .form__radio-fake:after {
+	content: "";
+	background-color: #1c5bc3;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -4px;
+	margin-top: -4px;
+}
+
+.form__radio-elem:checked + .form__radio-fake + .form__radio-text {
+	color: #1c5bc3;
+}
+
+.form__subnit-btn {
+	float: left;
+	width: 50%;
+	text-align: right;
+}
+
+.form__btn {
+	/* Style for "Rounded Re" */
+	width: 154px;
+	height: 45px;
+	border-radius: 3px;
+	background-color: #1c5bc3;
+	border: none;
+	color: #ffffff;
+	font-family: Roboto;
+	font-size: 12px;
+	font-weight: 700;	
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	position: relative;
+	padding-right: 30px;
+	cursor: pointer;
+}
+
+.form__btn-container {
+	display: block;
+	position: relative;
+}
+.form__btn-image {
+	content: "";
+	width: 15px;
+	height: 14px;
+	background-image: url(../../img/icons/main-icon-link.png);
+	position: absolute;
+	cursor: pointer;
+	right: 21px;
+	top: 15px;
+}
