--- a/css/components/comments.css
+++ b/css/components/comments.css
@@ -1,5 +1,3 @@
-
-
 .main__nav {
 	margin-top: 44px;
 	opacity: 0.8;
@@ -15,7 +13,6 @@
 	font-style: italic;
 }
 
-
 .main__list {
 	list-style-type: none;
 }
@@ -23,7 +20,7 @@
 .main__item {
 	border-bottom: 2px solid #f5f5f5;
 	padding-bottom: 30px;
-	margin-bottom: 30px;
+	margin-bottom: 25px;
 }
 
 .main__item--no-bot-border {
@@ -44,11 +41,8 @@
 	font-weight: 300;
 	width: 695px;
 	vertical-align: top;
-
-
 	width: 699px;
 }
-
 
 .main__item-date {
 	color: #656464;
@@ -73,7 +67,6 @@
 	line-height: 30px;
 }
 
-/*PAGINATOR*/
 .paginator {
 	margin-left: 221px;
 	margin-bottom: 72px;
@@ -87,7 +80,7 @@
 	font-weight: 300;
 	display: inline-block;
 	vertical-align: middle;
-	margin-right: 20px;
+	margin-right: 16px;
 }
 
 .paginator__less {
@@ -122,9 +115,8 @@
 	height: 25px;
 	border-radius: 3px;
 	background-color: transparent;
-
-	/*forgot wrap in "a" tag*/
 	cursor: pointer;
+	transition: 0.5s;
 }
 
 .paginator__item:hover {
@@ -147,16 +139,11 @@
 	margin-left: 6px;
 }
 
-/*
-	FORM
-*/
-
 .form {
 	width: 700px;
-	/*height: 427px;*/
 	border-radius: 3px;
 	background-color: #f5f5f5;
-	padding: 50px 70px;
+	padding: 34px 70px 50px;
 	margin-bottom: 70px;
 }
 
@@ -165,7 +152,7 @@
 	font-family: Roboto;
 	font-size: 49px;
 	font-weight: 700;
-	margin-bottom: 30px;
+	margin-bottom: 8px;
 }
 
 .form__cell {
@@ -175,8 +162,9 @@
 }
 
 .form_row {
-	margin-bottom: 20px;
+	margin-bottom: 21px;
 }
+
 .form__cell:first-child {
 	margin-right: 20px;
 }
@@ -195,7 +183,7 @@
 	width: 100%;
 	border: 1px solid transparent;
 	border-radius: 3px;	
-	padding: 17px 9px;
+	padding: 10px 9px;
 	font-family: Roboto;
 	font-size: 14px;
 	font-weight: 300;
@@ -213,7 +201,7 @@
 	height: 90px;
 	border: 1px solid transparent;
 	border-radius: 3px;
-	padding: 17px 9px;
+	padding: 5px 9px;
 	color: #221f1f;
 	font-family: Roboto;
 	font-size: 14px;
@@ -227,11 +215,7 @@
 }
 
 .form__row-btns {
-	
-}
-
-.form__controls {
-
+	margin-top: -6px;
 }
 
 .form__controls-title {
@@ -239,7 +223,7 @@
 	font-family: Roboto;
 	font-size: 14px;
 	font-weight: 300;
-	margin-bottom: 9px;
+	margin-bottom: 4px;
 }
 
 .form__controls-btns {
@@ -249,7 +233,7 @@
 
 .form__radio {
 	display: inline-block;
-	margin-right: 10px;
+	margin-right: 19px;
 }
 
 .form__radio-elem {
@@ -257,7 +241,6 @@
 	vertical-align: middle;
 	display: none;
 }
-
 
 .form__radio-fake {
 	width: 20px;
@@ -269,7 +252,6 @@
 	vertical-align: middle;
 	position: relative;
 }
-
 
 .form__radio-text {
 	color: #221f1f;
@@ -283,6 +265,7 @@
 .form__radio-elem:checked + .form__radio-fake {
 	border: 1px solid #1c5bc3;
 }
+
 .form__radio-elem:checked + .form__radio-fake:after {
 	content: "";
 	background-color: #1c5bc3;
@@ -307,9 +290,8 @@
 }
 
 .form__btn {
-	/* Style for "Rounded Re" */
-	width: 154px;
-	height: 45px;
+	width: 153px;
+    height: 44px;
 	border-radius: 3px;
 	background-color: #1c5bc3;
 	border: none;
@@ -318,10 +300,10 @@
 	font-size: 12px;
 	font-weight: 700;	
 	text-transform: uppercase;
-	letter-spacing: 2px;
-	position: relative;
+	letter-spacing: 2.5px;
 	padding-right: 30px;
 	cursor: pointer;
+	margin-top: 4px;
 }
 
 .form__btn-container {
@@ -336,5 +318,5 @@
 	position: absolute;
 	cursor: pointer;
 	right: 21px;
-	top: 15px;
+	top: 19px;
 }
