--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,11 +1,9 @@
 .footer {
-	/*в статичной верстве важно задать минимальную ширину у футера и врапера*/
-	min-width: 1100px;
+	width: 100%;
 	height: 76px;
 	background-color: #1c5bc3;
 	overflow: hidden;
 	margin-top: -76px;
-	/*text-align: center;*/
 	padding: 10px 0;
 }
 
@@ -45,6 +43,8 @@
 
 .socials {
 	text-align: right;
+	margin-right: -2px;
+    margin-top: 6px;
 }
 
 .socials__text {
@@ -61,15 +61,19 @@
 
 .socials__item {
 	display: inline-block;
-	margin-right: 10px;
+	margin-right: 11px;
 
 }
 
 .socials__link {
-	display: inline-block;
-	
+	display: inline-block;	
 }
 
 .socials__icon {
-
+	opacity: 0.8;
+	transition: 0.5s;
 }
+
+.socials__icon:hover {
+	opacity: 1;
+} 
