--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -1,13 +1,11 @@
-
-
 .menu__list {
 	max-width: 180px;
 	margin-top: 46px;	
-	padding-left: 20px;
+	padding-left: 18px;
 }
 
 .menu__item {
-	margin-bottom: 28px;
+	margin-bottom: 32px;
 	display: block;
 }
 
@@ -18,7 +16,6 @@
 	font-size: 0;
 }
 
-
 .menu__icon {
 	width: 23px;
 	height: 18px;
@@ -27,6 +24,7 @@
 	background-position: center center;
 	display: inline-block;
 	vertical-align: top;
+	transition: 0.5s;
 }
 
 .menu__text {
@@ -39,6 +37,8 @@
 	margin-left: 13px;
 	display: inline-block;
 	vertical-align: top;
+	transition: 0.5s;
+	letter-spacing: 2.5px;
 }
 
 .menu__icon--main {
@@ -53,9 +53,6 @@
 	background-image: url(../../img/icons/feed-icon.png);
 }
 
-
-
-
 .menu__link:hover .menu__text {
 	color: #221f1f;
 }
@@ -69,17 +66,23 @@
 	background-image: url(../../img/icons/main-icon-hovered.png);
 }
 
-
+.menu__item.active .menu__link {
+	cursor: default;
+}
 .menu__item.active .menu__text{
 	color: #221f1f;
+	cursor: default;
 }
 .menu__item.active .menu__icon--main{
 	background-image: url(../../img/icons/main-icon-hovered.png);
+	cursor: default;
 }
 .menu__item.active .menu__icon--crew{
 	background-image: url(../../img/icons/team-icon-hovered.png);
+	cursor: default;
 }
 .menu__item.active .menu__icon--feed{
 	background-image: url(../../img/icons/feed-icon-hovered.png);
+	cursor: default;
 }
 
