--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -29,7 +29,6 @@ ul li {
 }
 
 .wrapper {
-	/*в статичной верстве важно задать минимальную ширину у футера и врапера*/
 	min-width: 100%;
 	min-height: 100%;
 	overflow: hidden;
@@ -42,7 +41,6 @@ ul li {
 }
 
 .container {
-	/*или оставить фиксированную ширину?*/
-	max-width: 1100px;
+	width: 1100px;
 	margin: 0 auto;
 }
